<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="50dp"
    android:gravity="center"
    tools:context=".MainActivity2">
    <EditText


        android:id="@+id/Inputnameid2"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:hint="@string/yourname"
        android:inputType="text"
        android:backgroundTint="@color/black"
        android:textCursorDrawable="@null"

        android:autofillHints="" />


    <EditText

        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        android:textStyle="normal"

        android:importantForAutofill="no" />
    <Button
        android:layout_margin="50dp"
        android:id="@+id/login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"

        />

</LinearLayout>